[package]
name = "spewcap2"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
serialport5 = { version = "5.0.2"} # currenly the only branch which works on windows
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"]}
regex = "1.11.1"
chrono = "0.4.39"
crossterm = "0.28.1"
colored = "3.0.0"
term_size = "0.3.2"
rfd = "0.15.2"
dialoguer = "0.11.0"
thiserror = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1  # Some optimization in dev mode for better testing
